# PolarUV-robot

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ROV.sln  Settings.json  conanfile.txt
Conan/: conan.cmake  (+1 more)
main/: CMakeLists.txt  DataStruct.hpp  main.cpp  main.h  main.hpp  settings  settings.json
main/DataProtocols/: CMakeLists.txt  DataProtocols.hpp
main/DataProtocols/I2C/: I2C.cpp  I2C.hpp
main/DataProtocols/SPI/: SPI.cpp  SPI.hpp
main/DataProtocols/Socket/: CMakeLists.txt  Socket.cpp  Socket.hpp
main/DataProtocols/UART/: UART.cpp  UART.hpp
main/Matrix/: CMakeLists.txt
main/Matrix/include/: BaseMatrixClass.hpp  BaseVectorClass.hpp  FloatMatrixClass.hpp  FloatVectorClass.hpp  IntMatrixClass.hpp
main/Matrix/src/: FloatMatrixClass.cpp  FloatVectorClass.cpp  IntMatrixClass.cpp  IntVectorClass.cpp
main/Peripheral/: CMakeLists.txt
main/Peripheral/Interfaces/: IPeripheral.hpp
main/Peripheral/LiftBag/: CMakeLists.txt  LiftBag.cpp  LiftBag.hpp
main/Peripheral/MS5837/: MS5837.cpp  MS5837.hpp  MS5837Data.hpp
main/Sensors/: CMakeLists.txt  Sensors.hpp
main/Sensors/MS5837/: CMakeLists.txt  MS5837.hpp
main/Sensors/interfaces/: IData.hpp  ISensors.hpp
main/Services/: CMakeLists.txt  Services.hpp
main/Services/SPIService/: CMakeLists.txt  SPIService.cpp  SPIService.hpp
main/Services/SensorsHandlerService/: CMakeLists.txt  PeripheralHandlerService.cpp  SensorsHandlerService.cpp  SensorsHandlerService.hpp
main/Services/SettingsFileService/: CMakeLists.txt  SettingsFileService.cpp  SettingsFileService.hpp
main/Socket/: CMakeLists.txt  Socket.cpp  Socket.hpp
src/: CMakeLists.txt  DataStract.cpp  DataStruct.hpp  Startup.cpp  Startup.hpp  main.cpp  main.hpp  settings
src/DataProtocols/: CMakeLists.txt  CommandsProtocol.cpp  DataProtocols.hpp  I2C.cpp  SPI.cpp  Socket.cpp
src/DataProtocols/CommandsProtocol/: CommandsProtocol.hpp
src/DataProtocols/DataTransmissions/: DataTransmissions.hpp  I2C.cpp
src/DataProtocols/I2C/: CMakeLists.txt
src/DataProtocols/Matrix/: CMakeLists.txt
src/DataProtocols/Matrix/include/: IntVectorClass.hpp
src/DataProtocols/SPI/: CMakeLists.txt  SPI.cpp
src/DataProtocols/Services/: PeripheralHandlerService.cpp
src/DataProtocols/Services/SettingsFileService/: SettingsFileService.hpp
src/DataProtocols/SettingsProtocol/: SettingsProtocol.hpp
src/DataProtocols/UART/: CMakeLists.txt  UART.cpp
src/DataStructs/: CMakeLists.txt  DataStructs.hpp  SettingsStruct.cpp
src/DataStructs/MotorsStruct/: MotorsStruct.hpp
src/DataStructs/SettingStruct/: SettingsStruct.hpp
src/Lib/: CMakeLists.txt  Lib.cpp  Lib.hpp
src/Lib/Coroutine/: All.hpp  Default.hpp  I2CPeripheral.hpp
src/Lib/DataTransmissions/: CMakeLists.txt  DataTransmissions.hpp  I2C.cpp  SPI.cpp  Socket.cpp  TcpSession.cpp  UART.cpp
src/Lib/DataTransmissions/I2C/: I2C.hpp
src/Lib/DataTransmissions/SPI/: SPI.hpp
src/Lib/DataTransmissions/Socket/: Socket.hpp
src/Lib/DataTransmissions/TcpSession/: Packet.hpp  TcpSession.hpp
src/Lib/DataTransmissions/UART/: UART.hpp
src/Lib/Exceptions/: CMakeLists.txt  Exceptions.hpp  Handler.cpp  Handler.hpp
src/Lib/Exceptions/Base/: Base.hpp
src/Lib/Exceptions/BufferOverlfow/: BufferOverflow.hpp
src/Lib/Exceptions/ConnectionTimeout/: ConnectionTimeout.hpp
src/Lib/Exceptions/InvalidOperation/: InvalidOperation.hpp
src/Lib/Exceptions/RequestNotFound/: Exception.hpp  RequestNotFound.hpp
src/Lib/Exceptions/TransferError/: TransferError.hpp
src/Lib/Filters/: FiltersGroup.hpp  IFilter.hpp
src/Lib/Filters/CircleMovingAverage/: CircleMovingAverage.hpp
src/Lib/Filters/Nothing/: Nothing.hpp
src/Lib/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Lib/Math/: Math.hpp  Matrix.hpp  SIPrefix.hpp  StaticMatrix.hpp  TypeTraits.hpp  Vector.hpp
src/Lib/Math/Static/: Matrix.hpp  Vector.hpp
src/Lib/Math/StaticVector/: StaticVector.hpp
src/Lib/Peripheral/: ADS1115_I2C.cpp  BMP280_I2C.cpp  BNO055_I2C.cpp  CMakeLists.txt  LiftBag.cpp  MS5837_I2C.cpp  Peripheral.hpp  PeripheralHandler.cpp  SensorHandler.cpp
src/Lib/Peripheral/ADS1115/: ADS1115.hpp  ADS1115_I2C.hpp
src/Lib/Peripheral/BMP280/: BMP280.hpp  BMP280_I2C.hpp
src/Lib/Schedular/: Event.hpp
src/Lib/TcpSession/: BufferType.hpp  CMakeLists.txt  Packet.hpp  TcpSession.cpp  TcpSession.hpp
src/Lib/ThreadPool/: ThreadPool.hpp
src/Lib/Videostream/: CMakeLists.txt  Gstreamer.cpp  Gstreamer.hpp  VideoDeviceMessage.proto  Videostream.cpp  Videostream.hpp
src/Matrix/: CMakeLists.txt
src/Matrix/include/: BaseMatrixClass.hpp  FloatVectorClass.hpp  IntVectorClass.hpp
src/Matrix/src/: FloatMatrixClass.cpp  FloatVectorClass.cpp
src/Peripheral/: CMakeLists.txt  LiftBag.cpp  MS5837.cpp  Peripheral.hpp
src/Peripheral/Interfaces/: IPeripheral.hpp
src/Peripheral/MS5837/: MS5837.cpp  MS5837Data.hpp
src/Robot/: CMakeLists.txt  Robot.cpp  Robot.hpp
src/Robot/DataProtocols/: CMakeLists.txt  CommandsProtocol.cpp  DataProtocols.hpp  RobotSettingsProtocol.cpp  RobotVideoProtocol.cpp  SettingsProtocol.cpp  TelemetryProtocol.cpp
src/Robot/DataStructs/: CMakeLists.txt  CommandsStruct.cpp  DataStructs.hpp  MotorsStruct.cpp  RobotSettingsStruct.cpp
src/Robot/DataTransmissions/: CMakeLists.txt  I2C.cpp  SPI.cpp  Socket.cpp  TcpSession.cpp  UART.cpp
src/Robot/Features/: BaseProtocol.cpp  CMakeLists.txt  CommandsProtocol.cpp  DataProtocols.hpp  Features.hpp  RobotSettingsProtocol.cpp  RobotVideoProtocol.cpp  StartSettings.cpp
src/Robot/Math/: CMakeLists.txt  Math.hpp  Matrix.hpp  StaticMatrix.hpp  StaticVector.hpp  Vector.hpp
src/Robot/Peripheral/: BNO055.cpp  BNO055_I2C.cpp  CMakeLists.txt  MS5837.cpp  MS5837_I2C.cpp  Peripheral.hpp  PeripheralHandler.cpp  SensorsHandler.cpp
src/Robot/Server/: CMakeLists.txt  Core.cpp  IRequest.hpp  Server.hpp
src/Robot/Services/: SettingsFileService.cpp
src/Robot/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.hpp
src/Services/: CMakeLists.txt  SettingsFileService.cpp
src/Services/SettingsFileService/: CMakeLists.txt  SettingsFileService.cpp  SettingsFileService.hpp
(+154 files in other folders)
